--- a/Ajedrez/bin/.gitignore
+++ b/Ajedrez/bin/.gitignore
@@ -1,9 +1,9 @@
+/Caballo.class
+/Casilla.class
+/Peon.class
 /Pieza.class
 /Posicion.class
 /Tablero.class
-/Casillas.class
-/Casilla.class
 /Vacia.class
-/Peon.class
 /principal.class
-/Caballo.class
+/Alfil.class
