--- a/Ajedrez/bin/.gitignore
+++ b/Ajedrez/bin/.gitignore
@@ -1,29 +1,4 @@
-/Alfil.class
-/Caballo.class
-/Casilla.class
-/Dama.class
-/Juego.class
-/Peon.class
-/Pieza.class
-/Posicion.class
-/Rey.class
-/Tablero.class
-/Torre.class
-/Vacia.class
-/principal.class
-/Piezas/
 /Juego/
-/ajedrez/
-/alfil.png
-/alfilotro.png
-/caballo.png
-/caballootro.png
-/peon.png
-/peonotro.png
-/peonuno.png
-/reina.png
-/reinaotra.png
-/rey.png
-/reyotro.png
-/torre.png
-/torreotra.png
+/Piezas/
+/Interfaz/
+/interfaz/
