--- a/Ajedrez/bin/.gitignore
+++ b/Ajedrez/bin/.gitignore
@@ -5,3 +5,15 @@
 /InterfazWindowsBuilder$1.class
 /InterfazWindowsBuilder.class
 /images/
+/alfilb.png
+/alfiln.png
+/caballob.png
+/caballon.png
+/peonb.png
+/peonn.png
+/reinab.png
+/reinan.png
+/reyb.png
+/reyn.png
+/torreb.png
+/torren.png
